[package]
name = "restructed"
version = "0.1.3"
edition = "2021"
readme = "readme.md"
authors = ["Nex <nex@nexhub.co.uk>"]
description = "Quickly derive subsets of your structs"
keywords = ["structs", "views", "openapi", "generated", "derived"]
categories = ["derive-macro", "structs"]
license = "Unlicense"
license-file = "license.txt"

[lib]
proc-macro = true

[features]
default = ["builder", "openapi"]
openapi = ["dep:poem-openapi"]
builder = ["dep:typed-builder"]
welds = ["dep:welds"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }


# Supported Crates
poem-openapi = { version = "3.0", features = [
    "uuid",
    "chrono",
], optional = true }

typed-builder = { version = "0.18.0", optional = true }
welds = { version = "0.2.1", default-features = false, optional = true}
proc-macro-error = "1.0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true
