[package]
name = "restructed"
version = "0.2.1"
edition = "2021"
readme = "readme.md"
authors = ["Nex <nex@nexhub.co.uk>"]
description = "Quickly derive subsets of your structs"
keywords = ["view", "patch", "openapi", "derive", "restructed"]
categories = ["rust-patterns", "data-structures"]
license = "Unlicense"

[lib]
proc-macro = true

[features]
default = ["openapi"]
openapi = []
# builder = ["dep:typed-builder"]
# welds = ["dep:welds"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }
proc-macro-error = "1.0.4"


[dev-dependencies]
# # Supported Crates
poem-openapi = { version = "4.0", features = [
    "uuid",
    "chrono",
] }
# typed-builder = { version = "0.18.0" }
# welds = { version = "0.3", default-features = false}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true
