[package]
name = "restructed"
version = "0.2.1"
edition = "2021"
readme = "readme.md"
authors = ["Nex <nex@nexhub.co.uk>"]
description = "Quickly derive subsets of your structs"
keywords = ["view", "patch", "openapi", "derive", "restructed"]
categories = ["rust-patterns", "data-structures"]
license = "Unlicense"

[lib]
proc-macro = true

[features]
default = ["openapi"]
openapi = []
# builder = ["dep:typed-builder"]
# welds = ["dep:welds"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }
proc-macro-error = "1.0.4"


[dev-dependencies]
validator = { version = "0.20.0", features = ["derive"] }
# # Supported Crates
poem-openapi = { version = "5.1.15", features = [
    "uuid",
    "chrono",
]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true
